lib/src/openal_generated_bindings.dart


  void alEffecti(
    int effect,
    int param,
    int iValue,
  ) {
    return _alEffecti(
      effect,
      param,
      iValue,
    );
  }

  late final _alEffectiPtr =
      _lookup<ffi.NativeFunction<NativeAlEffecti>>('alEffecti');
  late final _alEffecti = _alEffectiPtr.asFunction<DartAlEffecti>(isLeaf: true);

  void alEffectiv(
    int effect,
    int param,
    ffi.Pointer<ALint> piValues,
  ) {
    return _alEffectiv(
      effect,
      param,
      piValues,
    );
  }

  late final _alEffectivPtr =
      _lookup<ffi.NativeFunction<NativeAlEffectiv>>('alEffectiv');
  late final _alEffectiv =
      _alEffectivPtr.asFunction<DartAlEffectiv>(isLeaf: true);

  void alEffectf(
    int effect,
    int param,
    double flValue,
  ) {
    return _alEffectf(
      effect,
      param,
      flValue,
    );
  }

  late final _alEffectfPtr =
      _lookup<ffi.NativeFunction<NativeAlEffectf>>('alEffectf');
  late final _alEffectf = _alEffectfPtr.asFunction<DartAlEffectf>(isLeaf: true);

  void alEffectfv(
    int effect,
    int param,
    ffi.Pointer<ALfloat> pflValues,
  ) {
    return _alEffectfv(
      effect,
      param,
      pflValues,
    );
  }

  late final _alEffectfvPtr =
      _lookup<ffi.NativeFunction<NativeAlEffectfv>>('alEffectfv');
  late final _alEffectfv =
      _alEffectfvPtr.asFunction<DartAlEffectfv>(isLeaf: true);

  void alGetEffecti(
    int effect,
    int param,
    ffi.Pointer<ALint> piValue,
  ) {
    return _alGetEffecti(
      effect,
      param,
      piValue,
    );
  }

  late final _alGetEffectiPtr =
      _lookup<ffi.NativeFunction<NativeAlGetEffecti>>('alGetEffecti');
  late final _alGetEffecti =
      _alGetEffectiPtr.asFunction<DartAlGetEffecti>(isLeaf: true);

  void alGetEffectiv(
    int effect,
    int param,
    ffi.Pointer<ALint> piValues,
  ) {
    return _alGetEffectiv(
      effect,
      param,
      piValues,
    );
  }

  late final _alGetEffectivPtr =
      _lookup<ffi.NativeFunction<NativeAlGetEffectiv>>('alGetEffectiv');
  late final _alGetEffectiv =
      _alGetEffectivPtr.asFunction<DartAlGetEffectiv>(isLeaf: true);

  void alGetEffectf(
    int effect,
    int param,
    ffi.Pointer<ALfloat> pflValue,
  ) {
    return _alGetEffectf(
      effect,
      param,
      pflValue,
    );
  }

  late final _alGetEffectfPtr =
      _lookup<ffi.NativeFunction<NativeAlGetEffectf>>('alGetEffectf');
  late final _alGetEffectf =
      _alGetEffectfPtr.asFunction<DartAlGetEffectf>(isLeaf: true);

  void alGetEffectfv(
    int effect,
    int param,
    ffi.Pointer<ALfloat> pflValues,
  ) {
    return _alGetEffectfv(
      effect,
      param,
      pflValues,
    );
  }

  late final _alGetEffectfvPtr =
      _lookup<ffi.NativeFunction<NativeAlGetEffectfv>>('alGetEffectfv');
  late final _alGetEffectfv =
      _alGetEffectfvPtr.asFunction<DartAlGetEffectfv>(isLeaf: true);

  void alGenFilters(
    int n,
    ffi.Pointer<ALuint> filters,
  ) {
    return _alGenFilters(
      n,
      filters,
    );
  }

  late final _alGenFiltersPtr =
      _lookup<ffi.NativeFunction<NativeAlGenFilters>>('alGenFilters');
  late final _alGenFilters =
      _alGenFiltersPtr.asFunction<DartAlGenFilters>(isLeaf: true);

  void alDeleteFilters(
    int n,
    ffi.Pointer<ALuint> filters,
  ) {
    return _alDeleteFilters(
      n,
      filters,
    );
  }

  late final _alDeleteFiltersPtr =
      _lookup<ffi.NativeFunction<NativeAlDeleteFilters>>('alDeleteFilters');
  late final _alDeleteFilters =
      _alDeleteFiltersPtr.asFunction<DartAlDeleteFilters>(isLeaf: true);

  int alIsFilter(
    int filter,
  ) {
    return _alIsFilter(
      filter,
    );
  }

  late final _alIsFilterPtr =
      _lookup<ffi.NativeFunction<NativeAlIsFilter>>('alIsFilter');
  late final _alIsFilter =
      _alIsFilterPtr.asFunction<DartAlIsFilter>(isLeaf: true);

  void alFilteri(
    int filter,
    int param,
    int iValue,
  ) {
    return _alFilteri(
      filter,
      param,
      iValue,
    );
  }

  late final _alFilteriPtr =
      _lookup<ffi.NativeFunction<NativeAlFilteri>>('alFilteri');
  late final _alFilteri = _alFilteriPtr.asFunction<DartAlFilteri>(isLeaf: true);

  void alFilteriv(
    int filter,
    int param,
    ffi.Pointer<ALint> piValues,
  ) {
    return _alFilteriv(
      filter,
      param,
      piValues,
    );
  }

  late final _alFilterivPtr =
      _lookup<ffi.NativeFunction<NativeAlFilteriv>>('alFilteriv');
  late final _alFilteriv =
      _alFilterivPtr.asFunction<DartAlFilteriv>(isLeaf: true);

  void alFilterf(
    int filter,
    int param,
    double flValue,
  ) {
    return _alFilterf(
      filter,
      param,
      flValue,
    );
  }

  late final _alFilterfPtr =
      _lookup<ffi.NativeFunction<NativeAlFilterf>>('alFilterf');
  late final _alFilterf = _alFilterfPtr.asFunction<DartAlFilterf>(isLeaf: true);

  void alFilterfv(
    int filter,
    int param,
    ffi.Pointer<ALfloat> pflValues,
  ) {
    return _alFilterfv(
      filter,
      param,
      pflValues,
    );
  }

  late final _alFilterfvPtr =
      _lookup<ffi.NativeFunction<NativeAlFilterfv>>('alFilterfv');
  late final _alFilterfv =
      _alFilterfvPtr.asFunction<DartAlFilterfv>(isLeaf: true);

  void alGetFilteri(
    int filter,
    int param,
    ffi.Pointer<ALint> piValue,
  ) {
    return _alGetFilteri(
      filter,
      param,
      piValue,
    );
  }

  late final _alGetFilteriPtr =
      _lookup<ffi.NativeFunction<NativeAlGetFilteri>>('alGetFilteri');
  late final _alGetFilteri =
      _alGetFilteriPtr.asFunction<DartAlGetFilteri>(isLeaf: true);

  void alGetFilteriv(
    int filter,
    int param,
    ffi.Pointer<ALint> piValues,
  ) {
    return _alGetFilteriv(
      filter,
      param,
      piValues,
    );
  }

  late final _alGetFilterivPtr =
      _lookup<ffi.NativeFunction<NativeAlGetFilteriv>>('alGetFilteriv');
  late final _alGetFilteriv =
      _alGetFilterivPtr.asFunction<DartAlGetFilteriv>(isLeaf: true);

  void alGetFilterf(
    int filter,
    int param,
    ffi.Pointer<ALfloat> pflValue,
  ) {
    return _alGetFilterf(
      filter,
      param,
      pflValue,
    );
  }

  late final _alGetFilterfPtr =
      _lookup<ffi.NativeFunction<NativeAlGetFilterf>>('alGetFilterf');
  late final _alGetFilterf =
      _alGetFilterfPtr.asFunction<DartAlGetFilterf>(isLeaf: true);

  void alGetFilterfv(
    int filter,
    int param,
    ffi.Pointer<ALfloat> pflValues,
  ) {
    return _alGetFilterfv(
      filter,
      param,
      pflValues,
    );
  }

  late final _alGetFilterfvPtr =
      _lookup<ffi.NativeFunction<NativeAlGetFilterfv>>('alGetFilterfv');
  late final _alGetFilterfv =
      _alGetFilterfvPtr.asFunction<DartAlGetFilterfv>(isLeaf: true);

  void alGenAuxiliaryEffectSlots(
    int n,
    ffi.Pointer<ALuint> effectslots,
  ) {
    return _alGenAuxiliaryEffectSlots(
      n,
      effectslots,
    );
  }

  late final _alGenAuxiliaryEffectSlotsPtr =
      _lookup<ffi.NativeFunction<NativeAlGenAuxiliaryEffectSlots>>(
          'alGenAuxiliaryEffectSlots');
  late final _alGenAuxiliaryEffectSlots = _alGenAuxiliaryEffectSlotsPtr
      .asFunction<DartAlGenAuxiliaryEffectSlots>(isLeaf: true);

  void alDeleteAuxiliaryEffectSlots(
    int n,
    ffi.Pointer<ALuint> effectslots,
  ) {
    return _alDeleteAuxiliaryEffectSlots(
      n,
      effectslots,
    );
  }

  late final _alDeleteAuxiliaryEffectSlotsPtr =
      _lookup<ffi.NativeFunction<NativeAlDeleteAuxiliaryEffectSlots>>(
          'alDeleteAuxiliaryEffectSlots');
  late final _alDeleteAuxiliaryEffectSlots = _alDeleteAuxiliaryEffectSlotsPtr
      .asFunction<DartAlDeleteAuxiliaryEffectSlots>(isLeaf: true);

  int alIsAuxiliaryEffectSlot(
    int effectslot,
  ) {
    return _alIsAuxiliaryEffectSlot(
      effectslot,
    );
  }

  late final _alIsAuxiliaryEffectSlotPtr =
      _lookup<ffi.NativeFunction<NativeAlIsAuxiliaryEffectSlot>>(
          'alIsAuxiliaryEffectSlot');
  late final _alIsAuxiliaryEffectSlot = _alIsAuxiliaryEffectSlotPtr
      .asFunction<DartAlIsAuxiliaryEffectSlot>(isLeaf: true);

  void alAuxiliaryEffectSloti(
    int effectslot,
    int param,
    int iValue,
  ) {
    return _alAuxiliaryEffectSloti(
      effectslot,
      param,
      iValue,
    );
  }

  late final _alAuxiliaryEffectSlotiPtr =
      _lookup<ffi.NativeFunction<NativeAlAuxiliaryEffectSloti>>(
          'alAuxiliaryEffectSloti');
  late final _alAuxiliaryEffectSloti = _alAuxiliaryEffectSlotiPtr
      .asFunction<DartAlAuxiliaryEffectSloti>(isLeaf: true);

  void alAuxiliaryEffectSlotiv(
    int effectslot,
    int param,
    ffi.Pointer<ALint> piValues,
  ) {
    return _alAuxiliaryEffectSlotiv(
      effectslot,
      param,
      piValues,
    );
  }

  late final _alAuxiliaryEffectSlotivPtr =
      _lookup<ffi.NativeFunction<NativeAlAuxiliaryEffectSlotiv>>(
          'alAuxiliaryEffectSlotiv');
  late final _alAuxiliaryEffectSlotiv = _alAuxiliaryEffectSlotivPtr
      .asFunction<DartAlAuxiliaryEffectSlotiv>(isLeaf: true);

  void alAuxiliaryEffectSlotf(
    int effectslot,
    int param,
    double flValue,
  ) {
    return _alAuxiliaryEffectSlotf(
      effectslot,
      param,
      flValue,
    );
  }

  late final _alAuxiliaryEffectSlotfPtr =
      _lookup<ffi.NativeFunction<NativeAlAuxiliaryEffectSlotf>>(
          'alAuxiliaryEffectSlotf');
  late final _alAuxiliaryEffectSlotf = _alAuxiliaryEffectSlotfPtr
      .asFunction<DartAlAuxiliaryEffectSlotf>(isLeaf: true);

  void alAuxiliaryEffectSlotfv(
    int effectslot,
    int param,
    ffi.Pointer<ALfloat> pflValues,
  ) {
    return _alAuxiliaryEffectSlotfv(
      effectslot,
      param,
      pflValues,
    );
  }

  late final _alAuxiliaryEffectSlotfvPtr =
      _lookup<ffi.NativeFunction<NativeAlAuxiliaryEffectSlotfv>>(
          'alAuxiliaryEffectSlotfv');
  late final _alAuxiliaryEffectSlotfv = _alAuxiliaryEffectSlotfvPtr
      .asFunction<DartAlAuxiliaryEffectSlotfv>(isLeaf: true);

  void alGetAuxiliaryEffectSloti(
    int effectslot,
    int param,
    ffi.Pointer<ALint> piValue,
  ) {
    return _alGetAuxiliaryEffectSloti(
      effectslot,
      param,
      piValue,
    );
  }

  late final _alGetAuxiliaryEffectSlotiPtr =
      _lookup<ffi.NativeFunction<NativeAlGetAuxiliaryEffectSloti>>(
          'alGetAuxiliaryEffectSloti');
  late final _alGetAuxiliaryEffectSloti = _alGetAuxiliaryEffectSlotiPtr
      .asFunction<DartAlGetAuxiliaryEffectSloti>(isLeaf: true);

  void alGetAuxiliaryEffectSlotiv(
    int effectslot,
    int param,
    ffi.Pointer<ALint> piValues,
  ) {
    return _alGetAuxiliaryEffectSlotiv(
      effectslot,
      param,
      piValues,
    );
  }

  late final _alGetAuxiliaryEffectSlotivPtr =
      _lookup<ffi.NativeFunction<NativeAlGetAuxiliaryEffectSlotiv>>(
          'alGetAuxiliaryEffectSlotiv');
  late final _alGetAuxiliaryEffectSlotiv = _alGetAuxiliaryEffectSlotivPtr
      .asFunction<DartAlGetAuxiliaryEffectSlotiv>(isLeaf: true);

  void alGetAuxiliaryEffectSlotf(
    int effectslot,
    int param,
    ffi.Pointer<ALfloat> pflValue,
  ) {
    return _alGetAuxiliaryEffectSlotf(
      effectslot,
      param,
      pflValue,
    );
  }

  late final _alGetAuxiliaryEffectSlotfPtr =
      _lookup<ffi.NativeFunction<NativeAlGetAuxiliaryEffectSlotf>>(
          'alGetAuxiliaryEffectSlotf');
  late final _alGetAuxiliaryEffectSlotf = _alGetAuxiliaryEffectSlotfPtr
      .asFunction<DartAlGetAuxiliaryEffectSlotf>(isLeaf: true);

  void alGetAuxiliaryEffectSlotfv(
    int effectslot,
    int param,
    ffi.Pointer<ALfloat> pflValues,
  ) {
    return _alGetAuxiliaryEffectSlotfv(
      effectslot,
      param,
      pflValues,
    );
  }

  late final _alGetAuxiliaryEffectSlotfvPtr =
      _lookup<ffi.NativeFunction<NativeAlGetAuxiliaryEffectSlotfv>>(
          'alGetAuxiliaryEffectSlotfv');
  late final _alGetAuxiliaryEffectSlotfv = _alGetAuxiliaryEffectSlotfvPtr
      .asFunction<DartAlGetAuxiliaryEffectSlotfv>(isLeaf: true);
